# poetry-demo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ASYNC_LCEL_GUIDE.md  CLAUSE_ANALYSIS_COMPLETE.md  DOCUMENT_ANALYSIS_SAMPLES.md  Dockerfile  LLAMAINDEX_GUIDE.md  MCP_GUIDE.md  REDIS_SETUP_GUIDE.md  RESPONSE_WRAPPER_APPLIED.md  RESPONSE_WRAPPER_COMPLETE.md  SESSION_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyproject.toml.bak  pyrightconfig.json  pytest.ini
app/: config.py  db.py  main.py  mcp_server.py  router.py
app/alembic/: env.py
app/configs/: llama_index.py  log_config.py  log_filters.py  logging.yaml
app/crud/: customer.py  user.py
app/dependencies/: auth.py  core.py
app/examples/: README.md  async_patterns.py  document_analysis_demo.py  lcel_patterns.py  llamaindex_patterns.py  mcp_client_example.py
app/models/: __init__.py  customer.py  document_analysis.py  user.py
app/routers/: customers.py  document_advanced_query.py  document_analysis.py  document_analysis_redis.py  document_clause_analysis.py  document_report_generation.py  document_table_analysis.py  document_upload.py  lcel_examples.py  llamaindex_examples.py  llm.py  mcp.py  rag.py  users.py
app/schemas/: api_response.py  customer.py  user.py
app/utils/: __init__.py  advanced_query.py  document_analysis.py  document_upload.py  exception.py  redis_client.py  redis_index.py  response_wrapper.py  security.py
docs/: ADVANCED_QUERY_API.md  CLAUSE_ANALYSIS_API.md  CWD_FILES_CLEANUP.md  DOCUMENTATION_ORGANIZED.md  LCEL_REQUEST_SAMPLES.md  LLAMAINDEX_REQUEST_SAMPLES.md  PYDANTIC_WARNING_FIX.md  README.md  REPORT_GENERATION_API.md  RESPONSE_WRAPPER_GUIDE.md  TABLE_ANALYSIS_API.md  TABLE_ANALYSIS_REQUEST_SAMPLES.md  UV_MIGRATION_GUIDE.md
docs/reports/: REDIS_CLIENT_REFACTORING.md  REFACTORING_COMPLETE.md  REPORT_GENERATION_COMPLETE.md  RESPONSE_WRAPPER_STATUS.md  TABLE_ANALYSIS_COMPLETE.md
src/: config.py  db.py  main.py  mcp_server.py  router.py
src/alembic/: env.py
src/configs/: llama_index.py  log_config.py  logging.yaml
src/crud/: customer.py  user.py
src/dependencies/: auth.py  core.py
src/examples/: __init__.py  document_analysis_demo.py  llamaindex_patterns.py  mcp_client_example.py
src/models/: __init__.py  customer.py  document_analysis.py  user.py
src/routers/: __init__.py  customers.py  document_advanced_query.py  document_analysis.py  document_analysis_redis.py  document_clause_analysis.py  document_report_generation.py  document_table_analysis.py  document_upload.py  lcel_examples.py  llamaindex_examples.py  llm.py  mcp.py  rag.py  users.py
src/schemas/: api_response.py  customer.py  customer_schema.py  user.py
src/utils/: __init__.py  advanced_query.py  document_analysis.py  document_upload.py  exception.py  redis_client.py  redis_index.py  response_wrapper.py  security.py
tests/: README.md  conftest.py  test_customer_crud.py  test_customer_routes.py  test_llm_routes.py
