[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "hyunbae.jeon",email = "imzeon@bdinc.co.kr"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "poetry-core (>=2.1.3,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "oracledb (>=3.2.0,<4.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'src.main:start'