[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "hyunbae.jeon",email = "mazingazz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "poetry-core (>=2.1.3,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "oracledb (>=3.2.0,<4.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "sqlalchemy-utils (==0.41.1)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "orjson (>=3.11.1,<4.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.30,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-teddynote (>=0.4.4,<0.5.0)"
]

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
pydantic-settings = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'src.main:start'