[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "hyunbae.jeon",email = "mazingazz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry.dependencies]
python = "^3.10"
poetry-core = ">=2.1.3,<3.0.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = { version = ">=0.35.0,<0.36.0", extras = ["standard"] }
oracledb = ">=3.2.0,<4.0.0"
sqlalchemy = ">=2.0.42,<3.0.0"
sqlalchemy-utils = "==0.41.1"
pydantic = ">=2.11.7,<3.0.0"
pandas = ">=2.3.1,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
orjson = ">=3.11.1,<4.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = "^25.1.0"
pydantic-settings = "^2.10.1"
flake8 = "^7.3.0"
isort = "^6.0.1"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203,W503"
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'src.main:start'